--- a/MyTeam.API/MyTeam.API.csproj
+++ b/MyTeam.API/MyTeam.API.csproj
@@ -9,6 +9,7 @@
     <DocumentationFile>MyTeam.API.xml</DocumentationFile>
     <PlatformTarget>x64</PlatformTarget>
     <NoWarn>1701;1702;1591</NoWarn>
+    <WarningsAsErrors>CS8632</WarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
