--- a/Service/packages.config
+++ b/Service/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="10.1.1" targetFramework="net461" />
+  <package id="AutoMapper.Extensions.Microsoft.DependencyInjection" version="8.1.1" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.0" targetFramework="net461" />
